--- a/package.json
+++ b/package.json
@@ -1,21 +1,42 @@
 {
-  "name": "create-react-app-starter",
+  "name": "edu_form",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@hookform/resolvers": "^3.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
+    "gh": "^2.8.9",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-is": "^18.2.0",
+    "react-redux": "^8.1.0",
     "react-scripts": "5.0.1",
-    "serve": "^14.2.0",
-    "web-vitals": "^3.3.1"
+    "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve build -s -n -L -p $PORT",
-    "build": "react-scripts build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "start-build": "yarn start && yarn build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -29,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0"
+  },
+  "homepage": "http://NPTUANIT2001.github.io/PGD"
 }
